SONAR-23974 Optimize the scanner report